# tap-zendesk-sell

./: .cruft.json  .pre-commit-config.yaml  CHANGELOG.md  LICENSE  LICENSE.md  README.md  meltano.yml  mypy.ini  pyproject.toml  tox.ini
.github/workflows/: build.yml  ci_workflow.yml  test.yml
tap_zendesk_sell/: __init__.py  __main__.py  client.py  streams.py  tap.py  zendesk_types.py
tap_zendesk_sell/helpers/: search.py
tap_zendesk_sell/schemas/: accounts.json  associated_contacts.json  contacts.json  deal_sources.json  deal_unqualified_reasons.json  deals.json  events.json  lead_sources.json  lead_unqualified_reasons.json  leads.json  line_items.json  loss_reasons.json  notes.json  orders.json  pipelines.json  products.json  stages.json  tags.json  tasks.json  text_messages.json  users.json  visit_outcomes.json  visits.json
tap_zendesk_sell/schemas/search/: contacts.json  deals.json  leads.json  notes.json  tasks.json
tap_zendesk_sell/streams/: __init__.py  accounts.py  contacts.py  deal_sources.py  deal_unqualified_reasons.py  deals.py  events.py  lead_sources.py  lead_unqualified_reasons.py  leads.py  loss_reasons.py  notes.py  orders.py  pipelines.py  products.py  stages.py  sync.py  tags.py  tasks.py  text_messages.py  users.py  visit_outcomes.py  visits.py
tap_zendesk_sell/tests/: __init__.py  test_core.py
tests/: test_core.py
