[tool.poetry]
name = "tap-zendesk-sell"
version = "0.0.7"
description = "`tap-zendesk-sell` is a Singer tap for Zendesk Sell, built with the Meltano SDK for Singer Taps."
authors = ["Luis Atala"]
keywords = [
    "ELT",
    "Zendesk",
    "Sell",
    "CRM",
    "Singer",
    "Singer Tap",
    "Meltano"
]
license = "Apache 2.0"

[tool.poetry.dependencies]
python = "*"
requests = "^2.25.1"
singer-sdk = "^0.45.10"
basecrm = "^1.2.9"
tenacity = "*"

[tool.poetry.dev-dependencies]
pytest = "^6.2.5"
tox = "^3.24.4"
flake8 = "^3.9.2"
black = "^21.9b0"
pydocstyle = "^6.1.1"
mypy = "^0.910"
types-requests = "^2.26.1"
isort = "^5.10.1"

[tool.isort]
profile = "black"
multi_line_output = 3 # Vertical Hanging Indent
src_paths = "tap_zendesk_sell"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
# CLI declaration
tap-zendesk-sell = 'tap_zendesk_sell.tap:TapZendeskSell.cli'
