[project]
name = "tap-zendesk-sell"
version = "0.0.7"
description = "Singer tap for Zendesk Sell, built with the Meltano Singer SDK."
authors = [{ name = "Luis Atala", email = "luis.atala@gmail.com" }]
requires-python = ">=3.9"
license = "Apache-2.0"
keywords = [
    "ELT",
    "Zendesk",
    "Sell",
    "CRM",
    "Singer",
    "Singer Tap",
    "Meltano",
    "Zendesk Sell",
]
classifiers = [
    "Intended Audience :: Developers",
    "License :: OSI Approved :: Apache Software License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
]
license-files = [ "LICENSE" ]
readme = "README.md"
dependencies = [
    "requests>=2.25.1,<3",
    "singer-sdk~=0.45.10",
    "basecrm>=1.2.9,<2",
]

[project.scripts]
tap-zendesk-sell = "tap_zendesk_sell.tap:TapZendeskSell.cli"

[dependency-groups]
dev = [
    { include-group = "test" },
]
test = [
    "pytest>=8",
    "pytest-github-actions-annotate-failures>=0.3",
    "singer-sdk[testing]",
]

[tool.pytest.ini_options]
addopts = [
    "--durations=10",
]

[tool.mypy]
warn_unused_configs = true

[tool.ruff]
target-version = "py39"

[tool.ruff.lint]
ignore = [
    "COM812",  # missing-trailing-comma
]
select = ["ALL"]

[tool.ruff.lint.flake8-annotations]
allow-star-arg-any = true

[tool.ruff.lint.pydocstyle]
convention = "google"

[build-system]
requires = [
    "hatchling>=1,<2",
]
build-backend = "hatchling.build"
